gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-blue
spec:
  selector:
    app: istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: nginx-blue
spec:
  gateways:
  - nginx-gateway
  hosts:
  - bg.test.com.sk
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: nginx-v1.nginx-blue.svc.cluster.local
        port:
          number: 80
      weight: 50
    - destination:
        host: nginx-v2.nginx-green.svc.cluster.local
        port:
          number: 80
      weight: 50
